--- a/styles/main.css
+++ b/styles/main.css
@@ -690,6 +690,7 @@ body {
   justify-content: center;
   width: 100%;
   box-sizing: border-box;
+  margin-top: 10px;
 }
 
 .gw-nav {
